--- a/Locmaquinas/email_natal.html
+++ b/Locmaquinas/email_natal.html
@@ -19,7 +19,7 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #ff8c00 0%, #ff6b00 100%);
+            background: #000000;
             padding: 30px 20px;
             text-align: center;
             position: relative;
@@ -236,7 +236,8 @@
     <div class="email-container">
         <!-- Header com Logo -->
         <div class="header">
-            <img src="cid:logo" alt="LocExpress Logo" class="logo">
+            <img src="cid:logo" alt="LocExpress Logo" class="logo"
+                style="max-width: 200px; height: auto; display: block; margin: 0 auto;">
         </div>
 
         <!-- Conteúdo Principal -->
@@ -257,7 +258,8 @@
             <div class="snowflakes">❄️ ❄️ ❄️ ❄️ ❄️</div>
 
             <!-- Imagem de Natal -->
-            <img src="cid:natal" alt="Feliz Natal" class="natal-image">
+            <img src="cid:natal" alt="Feliz Natal" class="natal-image"
+                style="width: 100%; max-width: 500px; height: auto; border-radius: 15px; margin: 30px auto; display: block; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
 
             <div class="divider"></div>
 
